# susumu_object_perception

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  SETUP.md  package.xml  predicted_costmap_layer.xml
.codex/: auto_improve_config.json  hooks.json
behavior_trees/: outdoor_patrol_replanning_no_recovery.xml
config/: agents_house.yaml  autoware_crop_box.param.yaml  autoware_euclidean_cluster.param.yaml  autoware_ground_filter.param.yaml  autoware_vehicle_info.param.yaml  ekf_odom_eval.yaml  ekf_odom_twist_imu_eval.yaml  ekf_odom_twist_imu_tf.yaml  nav2_params.yaml  nav2_params_outdoor_gps.yaml  nav2_params_outdoor_gps_smac_rpp.yaml  nav2_params_webots_explore.yaml  nav2_params_webots_explore_outdoor.yaml  nav2_params_webots_patrol.yaml  traffic_light_real.param.yaml  traffic_light_webots.param.yaml  webots_ros2control_ekf_odom_tf.yaml  webots_ros2control_ekf_odom_tf_radius1025.yaml  webots_ros2control_ekf_odom_tf_radius1046.yaml
docs/: apriltag_localization.md  autoware_hd_map_research.md  autoware_perception.md  continuous_improvement.md  launch.md  mid360_lidar_research.md  nav2_tuning.md  node_topology.md  omni_camera_recognition.md  omni_lidar_camera.md  robot_lidar.md  semantic_object_memory.md  semantic_object_memory_comparison.md  semantic_object_memory_research.md  software_design.md  traffic_light_recognition.md  webots_simulation.md  worlds.md
launch/: follow_person.launch.py  hunav_house.launch.py  simulation.launch.py  spawn_robot.launch.py  test_robot_empty.launch.py  webots_calibration.launch.py  webots_city.launch.py  webots_city_mapping.launch.py  webots_city_patrol.launch.py  webots_colored_slam.launch.py  webots_glim_colored_slam.launch.py  webots_indoor.launch.py  webots_indoor_mapping.launch.py  webots_nav.launch.py  webots_outdoor.launch.py  webots_outdoor_glim_mapping.launch.py  webots_outdoor_gps_nav.launch.py  webots_outdoor_gps_nav2.launch.py  webots_outdoor_mapping.launch.py  webots_outdoor_waypoint_nav.launch.py  webots_simulation.launch.py  webots_slam.launch.py  webots_waypoint_nav.launch.py
maps/: break_room.yaml  break_room_waypoints.yaml  cafe.pgm  cafe.yaml  city.yaml  city_waypoints.yaml  clear_tables.py  home.yaml  home_waypoints.yaml  house.yaml  indoor.pgm  indoor.yaml  indoor_recognition_eval_ignore_table_sofa.json  indoor_recognition_eval_ignore_table_sofa.md  indoor_recognition_waypoints.yaml  indoor_sparse_waypoints.yaml  indoor_waypoints.yaml  kitchen.yaml  kitchen_waypoints.yaml  outdoor.yaml  outdoor_gps_5m_waypoints.yaml  outdoor_gps_clearance_patrol_waypoints.yaml  outdoor_gps_smoke_waypoints.yaml  outdoor_waypoints.yaml  village_center.yaml  village_square_trimmed_cycle10.yaml  village_square_trimmed_cycle10_vs_world.csv  village_square_trimmed_cycle10_vs_world.json  village_square_trimmed_cycle11.yaml  village_square_trimmed_cycle11_vs_world.json  village_square_trimmed_cycle12.yaml  village_square_trimmed_cycle13_truth_monitor.md  village_square_trimmed_cycle13_vs_world.csv  village_square_trimmed_cycle13_vs_world.json  village_square_trimmed_cycle14_truth_monitor.csv  village_square_trimmed_cycle14_truth_monitor.json  village_square_trimmed_cycle14_yaw_drift.yaml  village_square_trimmed_cycle14_yaw_watchdog_truth_monitor.json  village_square_trimmed_cycle15_topic_glim2d.yaml  village_square_trimmed_cycle15_topic_glim2d_vs_world.csv  (+120 more)
resource/: turtlebot_webots_3d.urdf  turtlebot_webots_vlp16.urdf
rviz/: simulation.rviz
scripts/: capture_overview.sh  capture_overview_frames.py  check_colorized_cloud.py  check_map_vs_world.py  check_waypoints.py  clear_tables.py  direct_calib_to_tf.py  eval_map_quality.py  evaluate_debug_crops_yolo.py  evaluate_glim_map_variants.py  evaluate_gps_vs_slam.py  evaluate_recognition_vs_world.py  expand_waypoint_route.py  fence_probe_sensor_check_node.py  filter_object_memory_db.py  generate_apriltag_textures.py  generate_fence_probe_waypoints.py  generate_outdoor_waypoints.py  generate_recognition_debug_viewpoints.py  generate_waypoints.py  generate_webots_ground_truth_map.py  glim_cloud_to_2d_map.py  import_verifai_outdoor_worlds.py  live_slam_truth_monitor.py  map_progress_monitor.py  nav2_pose_costmap_monitor_node.py  outdoor_gps_localization_node.py  outdoor_gps_waypoint_nav_node.py  outdoor_nav2_waypoint_nav_node.py  prepare_overview_frames.py  record_omni_calibration_bag.sh  record_recognition_debug.py  record_traffic_light_stats.py  render_overview_gif.py  render_recognition_overlay.py  render_waypoint_frames.py  run_all_tasks.sh  run_codex_improvement_loop.py  run_direct_visual_lidar_calibration_docker.sh  save_pointcloud2_to_ply.py  (+12 more)
src/: predicted_costmap_layer.cpp
susumu_object_perception/: apriltag_extrinsic_calib_node.py  auto_patrol_node.py  bumper_plugin.py  collision_diagnostic_node.py  colorized_pointcloud_mapper_node.py  colorized_pointcloud_node.py  detection_by_tracker_node.py  equirect_camera_info_node.py  fall_detector_node.py  frontier_explore_node.py  geometry_utils.py  map_roi_filter_node.py  object_classifier_node.py  object_image_crop_node.py  object_memory_gui_node.py  object_memory_node.py  object_seeker_node.py  object_tracker_node.py  omni_image_compress_node.py  omni_image_node.py  omni_projection.py  omni_sensor_tf_node.py  patrol_waypoints.py  perception_marker_node.py  pointcloud_intensity_node.py  pointcloud_to_autoware_node.py  pose_stamped_tf_bridge_node.py  prediction_node.py  semantic_query_node.py  shape_estimation_node.py  step_detector_node.py  teleop_gui_node.py  traffic_light_detector_node.py  traffic_light_localizer_node.py  traffic_light_marker_node.py  waypoint_nav_node.py  waypoint_viz_node.py
susumu_sim/: detection_by_tracker_node.py  follow_person_node.py  map_roi_filter_node.py  object_tracker_node.py  perception_marker_node.py  person_detector_node.py  pointcloud_to_autoware_node.py  prediction_node.py
urdf/: botwheel_explorer.urdf.xacro  turtlebot3_waffle_3d.urdf.xacro  turtlebot3_waffle_vlp16.urdf.xacro
webots_worlds/: VERIFAI_BSD_LICENSE.txt  break_room.wbt  calibration.wbt  calibration_vlp16.wbt  city_robot.wbt  (+10 more)
(+169 files in other folders)
