<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>susumu_sim</name>
  <version>0.1.0</version>
  <description>
    Gazebo Classic simulation: HuNavSim-controlled pedestrians (5 people) in a
    multi-room house, with a 3D-LiDAR TurtleBot3 navigating around them via Nav2.
  </description>
  <maintainer email="taro@js5.so-net.ne.jp">taro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Teleop / auto-explore GUI node -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <!-- HuNavSim stack -->
  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_gazebo_wrapper</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>

  <!-- Simulation / robot -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation -->
  <exec_depend>nav2_bringup</exec_depend>
  <!-- slam:=True に切り替えたとき nav2_bringup が使う（既定は slam:=False で AMCL） -->
  <exec_depend>slam_toolbox</exec_depend>
  <!-- 3D LiDAR の /velodyne_points を 2D /scan に変換（2D LiDAR の代替） -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- Autoware sensing/perception パイプライン（検出まで純正、追跡/可視化は自作） -->
  <exec_depend>autoware_crop_box_filter</exec_depend>
  <exec_depend>autoware_ground_filter</exec_depend>
  <exec_depend>autoware_euclidean_cluster_object_detector</exec_depend>
  <exec_depend>autoware_vehicle_info_utils</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <!-- 自作 tracker / marker ノードが使う標準型 -->
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
