<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>susumu_object_perception</name>
  <version>0.1.0</version>
  <description>
    Gazebo Classic simulation: HuNavSim-controlled pedestrians (5 people) in a
    multi-room house, with a 3D-LiDAR TurtleBot3 navigating around them via Nav2.
  </description>
  <maintainer email="taro@js5.so-net.ne.jp">taro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 予測コストマップ層（C++ costmap_2d プラグイン）の build/exec 依存 -->
  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>ament_index_cpp</depend>
  <!-- LCAS livox MID-360 plugin（ODE MultiRayShape）の依存 -->
  <depend>std_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- 自律マッピングの探索は explore_lite(m-explore-ros2)を使う。apt に無いので
       ソース導入が前提: git clone https://github.com/robo-friends/m-explore-ros2
       を ~/ros2_ws/src に置き colcon build。屋内マッピング(webots_indoor_mapping.launch.py)
       の自作 frontier_explore と並列で評価したいときに使う。 -->
  <exec_depend>explore_lite</exec_depend>

  <!-- Teleop / auto-explore GUI node -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <!-- HuNavSim stack -->
  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_gazebo_wrapper</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>

  <!-- Simulation / robot -->
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation -->
  <exec_depend>nav2_bringup</exec_depend>
  <!-- slam:=True に切り替えたとき nav2_bringup が使う（既定は slam:=False で AMCL） -->
  <exec_depend>slam_toolbox</exec_depend>
  <!-- 3D LiDAR loop-closure backend for Webots colored point cloud SLAM. -->
  <exec_depend>glim_ros</exec_depend>
  <!-- 3D LiDAR の /lidar/points を 2D /scan に変換（2D LiDAR の代替） -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- Webots シミュレーション（webots_simulation.launch.py が同梱 world を起動）。
       driver/urdf/ros2control/nav2 resource は webots_ros2_turtlebot を流用する。 -->
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_turtlebot</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <!-- Autoware sensing/perception パイプライン（検出まで純正、追跡/可視化は自作） -->
  <exec_depend>autoware_crop_box_filter</exec_depend>
  <exec_depend>autoware_ground_filter</exec_depend>
  <exec_depend>autoware_euclidean_cluster_object_detector</exec_depend>
  <exec_depend>autoware_vehicle_info_utils</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <!-- ※ spatio_temporal_voxel_layer(STVL) は廃止（人の通過跡が残る問題のため）。
       動的障害物は自作 predicted_layer(PredictedCostmapLayer) + 2D /scan で扱う。 -->
  <exec_depend>rclcpp_components</exec_depend>
  <!-- 自作 tracker / marker / shape_estimation ノードが使う標準型 -->
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- 交通信号認識（traffic_light_detector_node）: カメラ画像 → 信号状態。
       出力型は既存 autoware_perception_msgs/TrafficSignalArray + vision_msgs。 -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_costmap_2d plugin="${prefix}/predicted_costmap_layer.xml" />
  </export>
</package>
